--- a/src/app/pages/configuration/configuration.component.html
+++ b/src/app/pages/configuration/configuration.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="nav-col col-2">
+  <div class="shadow nav-col col-2">
       <nav class="nav flex-column">
           <a class="nav-link active" href="#">Assessment</a>
           <a class="nav-link" href="#">Verification</a>
