--- a/src/app/pages/configuration/components/configuration/configuration.component.html
+++ b/src/app/pages/configuration/components/configuration/configuration.component.html
@@ -1,3 +1,24 @@
-<p>
-  configuration works!
-</p>
+<div class="row">
+  <div class="shadow col-2">
+    <ul class="nav flex-column">
+      <li class="nav-item">
+        <a class="nav-link active" href="#">Configurations</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">General</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Assessment</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Budget</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Verification</a>
+      </li>
+    </ul>
+  </div>
+  <div class="col-10">
+    Here is where the router outlet will be placed
+  </div>
+</div>
