refactor(Added AssessmentComponent into the ConfigurationModule):

--- a/src/app/pages/configuration/components/assessment/assessment.component.html
+++ b/src/app/pages/configuration/components/assessment/assessment.component.html
@@ -1,3 +1,23 @@
-<p>
-  assessment works!
-</p>
+<div>
+    <div class="card-header">
+        Assessment Configurations
+      </div>
+  <form>
+    <div class="form-group">
+      <label>Indicator</label>
+      <input type="text" class="form-control" placeholder="Enter indicator">
+    </div>
+    <div class="form-group">
+        <label>Data Element</label>
+        <select></select>
+      </div>
+    <div class="form-group">
+      <label>Possible Maximum Value</label>
+      <input type="number" class="form-control" placeholder="Enter possible maximum vallue">
+    </div>
+    <div class="row form-group form-check">
+      <input type="submit" class=" btn-primary" value="Done">
+      <input type="submit" class=" btn-primary" value="Next">
+    </div>
+  </form>
+</div>
