--- a/src/app/pages/configuration/components/assessment/assessment.component.html
+++ b/src/app/pages/configuration/components/assessment/assessment.component.html
@@ -2,22 +2,29 @@
     <div class="card-header">
         Assessment Configurations
       </div>
-  <form>
+  <form [formGroup]="assessmentForm">
     <div class="form-group">
       <label>Indicator</label>
       <input type="text" class="form-control" placeholder="Enter indicator">
     </div>
     <div class="form-group">
         <label>Data Element</label>
-        <select></select>
+        <select class="custom-select">
+            <option selected>Open this select menu</option>
+            <option *ngFor="let option of dataElement; let i=index" value="i">{{option}}</option>
+          </select>
       </div>
     <div class="form-group">
       <label>Possible Maximum Value</label>
       <input type="number" class="form-control" placeholder="Enter possible maximum vallue">
     </div>
-    <div class="row form-group form-check">
-      <input type="submit" class=" btn-primary" value="Done">
-      <input type="submit" class=" btn-primary" value="Next">
+    <div class="row">
+      <div class="form-group form-check col-6">
+        <input type="submit" class="btn btn-primary" value="Done">
+      </div>
+      <div class="form-group form-check col-6">
+        <button type="submit" class="btn btn-primary">Next</button>
+      </div>
     </div>
   </form>
 </div>
