style: Edited Assessment Configurations Form values

--- a/src/app/pages/configuration/components/assessment/assessment.component.html
+++ b/src/app/pages/configuration/components/assessment/assessment.component.html
@@ -10,7 +10,7 @@
     <div class="form-group">
         <label>Data Element</label>
         <select class="custom-select">
-            <option selected>Open this select menu</option>
+            <option selected>[Select Data Element]</option>
             <option *ngFor="let option of dataElement; let i=index" value="i">{{option}}</option>
           </select>
       </div>
