--- a/src/app/pages/configuration/components/verification/verification.component.html
+++ b/src/app/pages/configuration/components/verification/verification.component.html
@@ -1,3 +1,40 @@
-<p>
-  verification works!
-</p>
+<div>
+    <div class="card-header">
+        Verification Configurations
+      </div>
+  <form [formGroup]="verificationForm" (ngSubmit)="onClickDone(verificationForm.value)">
+    <div class="form-group">
+      <label>Indicator</label>
+      <input type="text" formControlName="indicator" class="form-control" placeholder="{{indicator}}">
+    </div>
+    <div class="form-group">
+        <label>Data Element</label>
+        <select class="custom-select" formControlName="dataElement">
+            <option selected>[Select Data Element]</option>
+            <option *ngFor="let option of dataElements; let i=index" value="{{i}}">{{option}}</option>
+          </select>
+      </div>
+    <div class="form-group">
+      <label>Unit Fee</label>
+      <input type="number" formControlName="unitFee" class="form-control" placeholder="{{unitFee}}">
+    </div>
+    <div class="form-group">
+        <label>Torelance Rate</label>
+        <div class="input-group">
+        <input type="number" formControlName="torelanceRate" class="form-control" placeholder="{{torelanceRate}}">
+        <div class="input-group-append">
+            <span class="input-group-text">%</span>
+          </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="form-group form-check col col-10">
+        <input type="submit" class="btn btn-primary" value="Done">
+      </div>
+      <div class="form-group form-check col col-2">
+        <button type="submit" class="btn btn-primary" (click)="onClickAdd(verificationForm.value)">Add</button>
+      </div>
+    </div>
+  </form>
+</div>
+
