--- a/src/app/pages/configuration/components/general/general.component.html
+++ b/src/app/pages/configuration/components/general/general.component.html
@@ -1,3 +1,17 @@
-<p>
-  general works!
-</p>
+<div>
+  <div class="card-header">
+    General Configurations
+  </div>
+  <div class="card">
+      <div class="card-body" style="padding: 5px;">
+        <ngx-dhis2-period-filter
+          [selectedPeriods]="selectedPeriodItems"
+          [periodFilterConfig]="periodFilterConfig"
+          [lowestPeriodType]="'Monthly'"
+          (update)="onPeriodUpdate($event, 'UPDATE')"
+          (change)="onPeriodUpdate($event, 'CHANGE')"
+          (close)="onPeriodUpdate($event, 'CLOSE')"
+        ></ngx-dhis2-period-filter>
+      </div>
+    </div>
+</div>
