style: Edited Form Styles in Assessment and Verification Forms

--- a/src/app/pages/configuration/components/assessment/assessment.component.html
+++ b/src/app/pages/configuration/components/assessment/assessment.component.html
@@ -23,7 +23,7 @@
           <button type="submit" class="btn btn-primary" (click)="onClickDone(assessmentForm.value)">Done</button>
       </div>
       <div class="form-group form-check  col col-2">
-        <button type="submit" class="btn btn-primary" (click)="onClickAdd(assessmentForm.value)">Add <i class="fas fa-plus-circle"></i></button>
+        <button type="submit" class="btn btn-primary" (click)="onClickAdd(assessmentForm.value)">Add</button>
       </div>
     </div>
   </form>
