style: Styled navigation tabs in the app component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,10 +15,8 @@
             <li class="nav-item">
               <a class="nav-link" [routerLink]="['/report']" routerLinkActive="router-link-active"  >Report</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" [routerLink]="['/configuration']" routerLinkActive="router-link-active"  >Configuration</a>
-            </li>
           </ul>
+          <button class="btn btn-outline-primary my-2 my-sm-0" [routerLink]="['/configuration']" routerLinkActive="router-link-active">Configurations <i class="fa fa-cogs"></i></button>
         </nav>
     <router-outlet></router-outlet>
   </div>
