--- a/src/app/pages/configuration/components/configuration/configuration.component.html
+++ b/src/app/pages/configuration/components/configuration/configuration.component.html
@@ -2,19 +2,19 @@
   <div class="shadow col-2">
     <ul class="nav flex-column">
       <li class="nav-item">
-        <a class="nav-link active" [routerLink]="['/configuration/configurationslist']" >Configurations</a>
+        <a class="nav-link active" [routerLink]="['/configuration/configurationslist']" routerLinkActive="router-link-active">Configurations</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link"  [routerLink]="['/configuration/general']">General</a>
+        <a class="nav-link"  [routerLink]="['/configuration/general']" routerLinkActive="router-link-active">General</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link"  [routerLink]="['/configuration/assessment']">Assessment</a>
+        <a class="nav-link"  [routerLink]="['/configuration/assessment']" routerLinkActive="router-link-active">Assessment</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link"  [routerLink]="['/configuration/budget']">Budget</a>
+        <a class="nav-link"  [routerLink]="['/configuration/budget']" routerLinkActive="router-link-active">Budget</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link"  [routerLink]="['/configuration/verification']">Verification</a>
+        <a class="nav-link"  [routerLink]="['/configuration/verification']" routerLinkActive="router-link-active">Verification</a>
       </li>
     </ul>
   </div>
