--- a/src/app/pages/configuration/components/configuration/configuration.component.css
+++ b/src/app/pages/configuration/components/configuration/configuration.component.css
@@ -1,3 +1,9 @@
 .row{
   margin: 5px;
 }
+.router-link-active{
+  background: rgb(21, 119, 248);
+  color: white;
+  border-bottom-right-radius: 5px;
+  border-top-right-radius: 5px;
+}
