refactor(Configuration Module): Deleted Configuration-List Component
Deleted the Configuration-List Component from its module.

--- a/src/app/pages/configuration/components/configuration/configuration.component.html
+++ b/src/app/pages/configuration/components/configuration/configuration.component.html
@@ -1,9 +1,6 @@
 <div class="row">
-  <div class="shadow col-2">
+  <div class="card-header col-2">
     <ul class="nav flex-column">
-      <li class="nav-item">
-        <a class="nav-link active" [routerLink]="['/configuration/configurationslist']" routerLinkActive="router-link-active">Configurations</a>
-      </li>
       <li class="nav-item">
         <a class="nav-link"  [routerLink]="['/configuration/general']" routerLinkActive="router-link-active">General</a>
       </li>
@@ -11,10 +8,10 @@
         <a class="nav-link"  [routerLink]="['/configuration/assessment']" routerLinkActive="router-link-active">Assessment</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link"  [routerLink]="['/configuration/budget']" routerLinkActive="router-link-active">Budget</a>
+        <a class="nav-link"  [routerLink]="['/configuration/verification']" routerLinkActive="router-link-active">Verification</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link"  [routerLink]="['/configuration/verification']" routerLinkActive="router-link-active">Verification</a>
+        <a class="nav-link"  [routerLink]="['/configuration/budget']" routerLinkActive="router-link-active">Budget</a>
       </li>
     </ul>
   </div>
