--- a/src/app/pages/configuration/components/assessment/assessment.component.html
+++ b/src/app/pages/configuration/components/assessment/assessment.component.html
@@ -1,6 +1,6 @@
 <div>
   <div class="card-header">
-    Assessment Configurations
+    Add Assessment Indicator
   </div>
   <form [formGroup]="assessmentForm">
     <div class="form-group">
@@ -33,23 +33,26 @@
       />
     </div>
     <div class="row">
-      <div class="form-group form-check col col-10">
+        <div class="form-group form-check  col col-10">
+        <a [routerLink]="['/configuration/assessment']" routerLinkActive="router-link-active">
+          <button
+              type="submit"
+              class="btn btn-primary"
+              (click)="onClickAdd(assessmentForm.value)"
+            >
+            <i class="fa fa-backward"></i> Back
+            </button>
+          </a>
+        </div>
+      <div class="form-group form-check col col-2">
+        <a [routerLink]="['/configuration/assessment']" routerLinkActive="router-link-active">
         <button
           type="submit"
           class="btn btn-primary"
-          (click)="onClickDone(assessmentForm.value)"
         >
           Done
         </button>
-      </div>
-      <div class="form-group form-check  col col-2">
-        <button
-          type="submit"
-          class="btn btn-primary"
-          (click)="onClickAdd(assessmentForm.value)"
-        >
-          Add
-        </button>
+        </a>
       </div>
     </div>
   </form>
