refactor(Configuratio Module): Created a new verification-list Component

--- a/src/app/pages/configuration/components/assessment/assessment.component.html
+++ b/src/app/pages/configuration/components/assessment/assessment.component.html
@@ -40,7 +40,7 @@
               class="btn btn-primary"
               (click)="onClickAdd(assessmentForm.value)"
             >
-            <i class="fa fa-backward"></i> Back
+             Cancel
             </button>
           </a>
         </div>
@@ -50,7 +50,7 @@
           type="submit"
           class="btn btn-primary"
         >
-          Done
+          Save
         </button>
         </a>
       </div>
