--- a/src/app/pages/configuration/components/assessment-list/assessment-list.component.css
+++ b/src/app/pages/configuration/components/assessment-list/assessment-list.component.css
@@ -1,10 +1,18 @@
 .add{
+  height: 50px;
+  width: 50px;
   position: absolute;
   bottom: 8px;
   right: 8px;
-  background: none;
-  background-color: transparent;
+  background: rgb(39, 102, 150);
   border: none;
-  color:  rgb(39, 102, 150);
-  font-size: 50px;
+  font-size: 15px;
+  border-radius: 50%;
+}
+.menu-button{
+  background: none;
+  border: none;
+}
+.fa{
+  color: white;
 }
