--- a/src/app/pages/configuration/components/verification-list/verification-list.component.html
+++ b/src/app/pages/configuration/components/verification-list/verification-list.component.html
@@ -2,7 +2,7 @@
   <div class="card-header">
     Verification Indicators
   </div>
-  <div class="overflow-auto">
+  <div class="overflow-auto tableContainer">
     <table class="table table-hover">
       <thead>
         <tr>
@@ -23,10 +23,28 @@
               <td>{{ indicator.unitFee }}</td>
               <td>{{ indicator.toleranceRate }}</td>
               <td>{{ sno | date}}</td>
-              <td><a href="#"> <i class="fa fa-ellipsis-v"></i> </a></td>
+              <td>
+                  <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu" class="menu-button">
+                      <mat-icon>more_vert</mat-icon>
+                    </button>
+                    <mat-menu #menu="matMenu">
+                      <button mat-menu-item>
+                        <i class="fa fa-edit"></i>
+                        <span>  Edit</span>
+                      </button>
+                      <button mat-menu-item >
+                        <i class="fa fa-trash"></i>
+                        <span>  Delete</span>
+                      </button>
+                    </mat-menu>
+              </td>
             </tr>
       </tbody>
-    </table>
+  </table>
+      <a [routerLink]="['/configuration/verification_configurations']" routerLinkActive="router-link-active" >
+        <button class="add">
+          <i class="fa fa-plus"></i>
+        </button>
+      </a>
   </div>
-  <button class="add"><a [routerLink]="['/configuration/verification_configurations']" routerLinkActive="router-link-active" ><i class="fa fa-plus-circle"></i></a></button>
 </div>
