style: Changed icon colors

--- a/src/app/pages/configuration/components/assessment-list/assessment-list.component.html
+++ b/src/app/pages/configuration/components/assessment-list/assessment-list.component.html
@@ -2,7 +2,7 @@
   <div class="card-header">
     Assessment Indicators
   </div>
-  <div class="overflow-auto">
+  <div class="overflow-auto tableContainer">
     <table class="table table-hover">
       <thead>
         <tr>
@@ -39,5 +39,5 @@
       </tbody>
     </table>
   </div>
-  <button class="add"><a [routerLink]="['/configuration/assessment_configurations']" routerLinkActive="router-link-active" ><i class="fa fa-plus"></i></a></button>
+  <button class="add"><a [routerLink]="['/configuration/assessment_configurations']" routerLinkActive="router-link-active" ><i class="savage fa fa-plus"></i></a></button>
 </div>
