--- a/src/app/pages/configuration/components/verification-list/verification-list.component.html
+++ b/src/app/pages/configuration/components/verification-list/verification-list.component.html
@@ -43,7 +43,7 @@
   </table>
       <a [routerLink]="['/configuration/verification_configurations']" routerLinkActive="router-link-active" >
         <button class="add">
-          <i class="fa fa-plus"></i>
+          <i class="savage fa fa-plus"></i>
         </button>
       </a>
   </div>
