--- a/src/app/pages/configuration/components/assessment-list/assessment-list.component.css
+++ b/src/app/pages/configuration/components/assessment-list/assessment-list.component.css
@@ -1,9 +1,14 @@
+.tableContainer{
+  height: 350px;
+  overflow-y: scroll;
+  overflow: hidden;
+}
 .add{
   height: 50px;
   width: 50px;
   position: absolute;
-  bottom: 8px;
-  right: 8px;
+  bottom: 15px;
+  right: 15px;
   background: rgb(39, 102, 150);
   border: none;
   font-size: 15px;
@@ -13,6 +18,6 @@
   background: none;
   border: none;
 }
-.fa{
+.savage{
   color: white;
 }
