--- a/src/app/pages/configuration/components/assessment-list/assessment-list.component.html
+++ b/src/app/pages/configuration/components/assessment-list/assessment-list.component.html
@@ -2,7 +2,7 @@
   <div class="card-header">
     Assessment Indicators
   </div>
-  <div class="overflow-auto">
+  <div *ngIf="assessmentIndicators$ | async" class="overflow-auto">
     <table class="table table-hover">
       <thead>
         <tr>
@@ -15,29 +15,46 @@
         </tr>
       </thead>
       <tbody>
-          <tr *ngFor="let indicator of assessmentIndicators; let sno=index">
-              <th scope="row">{{ sno+1 }}</th>
-              <td>{{ indicator.indicator }}</td>
-              <td>{{ indicator.dataElement }}</td>
-              <td>{{ indicator.possibleMaximumValue }}</td>
-              <td>{{ sno | date}}</td>
-              <td>
-                <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu" class="menu-button">
-                  <mat-icon>more_vert</mat-icon>
-                </button>
-                <mat-menu #menu="matMenu">
-                  <button mat-menu-item>
-                    <i class="fa fa-edit"></i>
-                    <span>  Edit</span>
-                  </button>
-                  <button mat-menu-item >
-                    <i class="fa fa-trash"></i>
-                    <span>  Delete</span>
-                  </button>
-                </mat-menu></td>
-            </tr>
+        <tr
+          *ngFor="
+            let indicator of assessmentIndicators$ | async;
+            let sno = index
+          "
+        >
+          <th scope="row">{{ sno + 1 }}</th>
+          <td>{{ indicator.indicator }}</td>
+          <td>{{ indicator.dataElement }}</td>
+          <td>{{ indicator.possibleMaxValue }}</td>
+          <td>{{ sno | date }}</td>
+          <td>
+            <button
+              mat-icon-button
+              [matMenuTriggerFor]="menu"
+              aria-label="Example icon-button with a menu"
+              class="menu-button"
+            >
+              <mat-icon>more_vert</mat-icon>
+            </button>
+            <mat-menu #menu="matMenu">
+              <button mat-menu-item>
+                <i class="fa fa-edit"></i>
+                <span> Edit</span>
+              </button>
+              <button mat-menu-item>
+                <i class="fa fa-trash"></i>
+                <span> Delete</span>
+              </button>
+            </mat-menu>
+          </td>
+        </tr>
       </tbody>
     </table>
   </div>
-  <button class="add"><a [routerLink]="['/configuration/assessment_configurations']" routerLinkActive="router-link-active" ><i class="fa fa-plus"></i></a></button>
+  <button class="add">
+    <a
+      [routerLink]="['/configuration/assessment_configurations']"
+      routerLinkActive="router-link-active"
+      ><i class="fa fa-plus"></i
+    ></a>
+  </button>
 </div>
