--- a/src/app/pages/configuration/components/assessment/assessment.component.html
+++ b/src/app/pages/configuration/components/assessment/assessment.component.html
@@ -2,7 +2,7 @@
   <div class="card-header">
     Add Assessment Indicator
   </div>
-  <form [formGroup]="assessmentForm">
+  <form [formGroup]="assessmentForm" (ngSubmit)="onClickDone()">
     <div class="form-group">
       <label>Indicator</label>
       <input
@@ -33,26 +33,20 @@
       />
     </div>
     <div class="row">
-        <div class="form-group form-check  col col-10">
-        <a [routerLink]="['/configuration/assessment']" routerLinkActive="router-link-active">
-          <button
-              type="submit"
-              class="btn btn-primary"
-              (click)="onClickAdd(assessmentForm.value)"
-            >
-             Cancel
-            </button>
-          </a>
-        </div>
-      <div class="form-group form-check col col-2">
-        <a [routerLink]="['/configuration/assessment']" routerLinkActive="router-link-active">
-        <button
-          type="submit"
-          class="btn btn-primary"
+      <div class="form-group form-check  col col-10">
+        <a
+          [routerLink]="['/configuration/assessment']"
+          routerLinkActive="router-link-active"
         >
+          <button type="submit" class="btn btn-primary">
+            Cancel
+          </button>
+        </a>
+      </div>
+      <div class="form-group form-check col col-2">
+        <button type="submit" class="btn btn-primary">
           Save
         </button>
-        </a>
       </div>
     </div>
   </form>
