--- a/src/app/pages/configuration/components/verification-list/verification-list.component.html
+++ b/src/app/pages/configuration/components/verification-list/verification-list.component.html
@@ -2,7 +2,10 @@
   <div class="card-header">
     Verification Indicators
   </div>
-  <div class="overflow-auto tableContainer">
+  <div
+    *ngIf="verificationIndicators$ | async"
+    class="overflow-auto tableContainer"
+  >
     <table class="table table-hover">
       <thead>
         <tr>
@@ -16,35 +19,48 @@
         </tr>
       </thead>
       <tbody>
-          <tr *ngFor="let indicator of verificationIndicators; let sno=index">
-              <th scope="row">{{ sno+1 }}</th>
-              <td>{{ indicator.indicator }}</td>
-              <td>{{ indicator.dataElement }}</td>
-              <td>{{ indicator.unitFee }}</td>
-              <td>{{ indicator.toleranceRate }}</td>
-              <td>{{ sno | date}}</td>
-              <td>
-                  <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu" class="menu-button">
-                      <mat-icon>more_vert</mat-icon>
-                    </button>
-                    <mat-menu #menu="matMenu">
-                      <button mat-menu-item>
-                        <i class="fa fa-edit"></i>
-                        <span>  Edit</span>
-                      </button>
-                      <button mat-menu-item >
-                        <i class="fa fa-trash"></i>
-                        <span>  Delete</span>
-                      </button>
-                    </mat-menu>
-              </td>
-            </tr>
+        <tr
+          *ngFor="
+            let indicator of verificationIndicators$ | async;
+            let sno = index
+          "
+        >
+          <th scope="row">{{ sno + 1 }}</th>
+          <td>{{ indicator.indicator }}</td>
+          <td>{{ indicator.dataElement }}</td>
+          <td>{{ indicator.unitFee }}</td>
+          <td>{{ indicator.toleranceRate }}</td>
+          <td>{{ sno | date }}</td>
+          <td>
+            <button
+              mat-icon-button
+              [matMenuTriggerFor]="menu"
+              aria-label="Example icon-button with a menu"
+              class="menu-button"
+            >
+              <mat-icon>more_vert</mat-icon>
+            </button>
+            <mat-menu #menu="matMenu">
+              <button mat-menu-item>
+                <i class="fa fa-edit"></i>
+                <span> Edit</span>
+              </button>
+              <button mat-menu-item>
+                <i class="fa fa-trash"></i>
+                <span> Delete</span>
+              </button>
+            </mat-menu>
+          </td>
+        </tr>
       </tbody>
-  </table>
-      <a [routerLink]="['/configuration/verification_configurations']" routerLinkActive="router-link-active" >
-        <button class="add">
-          <i class="fa fa-plus"></i>
-        </button>
-      </a>
+    </table>
+    <a
+      [routerLink]="['/configuration/verification_configurations']"
+      routerLinkActive="router-link-active"
+    >
+      <button class="add">
+        <i class="fa fa-plus"></i>
+      </button>
+    </a>
   </div>
 </div>
