feat: added error message on configurations not available

--- a/src/app/pages/configuration/components/assessment-list/assessment-list.component.css
+++ b/src/app/pages/configuration/components/assessment-list/assessment-list.component.css
@@ -1,9 +1,13 @@
-.tableContainer{
+.warning {
+  text-align: center;
+}
+
+.tableContainer {
   height: 400px;
   overflow-y: scroll;
   overflow: hidden;
 }
-.add{
+.add {
   height: 50px;
   width: 50px;
   position: absolute;
@@ -14,10 +18,10 @@
   font-size: 15px;
   border-radius: 50%;
 }
-.menu-button{
+.menu-button {
   background: none;
   border: none;
 }
-.savage{
+.savage {
   color: white;
 }
