refactor: Added OrgUnit Filter

--- a/src/app/pages/verification/components/verification/verification.component.html
+++ b/src/app/pages/verification/components/verification/verification.component.html
@@ -1,3 +1,6 @@
-<p>
-  verification module components works!
-</p>
+<ngx-dhis2-org-unit-filter
+    [orgUnitFilterConfig]="orgUnitFilterConfig"
+    [selectedOrgUnitItems]="selectedOrgUnitItems"
+    (orgUnitUpdate)="onOrgUnitUpdate($event, 'UPDATE')"
+    (orgUnitClose)="onOrgUnitUpdate($event, 'CLOSE')">
+</ngx-dhis2-org-unit-filter>
