--- a/src/app/pages/assessment/components/assessment/assessment.component.html
+++ b/src/app/pages/assessment/components/assessment/assessment.component.html
@@ -1,3 +1,6 @@
-<p>
-  assessment module components works!
-</p>
+<ngx-dhis2-org-unit-filter
+    [orgUnitFilterConfig]="orgUnitFilterConfig"
+    [selectedOrgUnitItems]="selectedOrgUnitItems"
+    (orgUnitUpdate)="onOrgUnitUpdate($event, 'UPDATE')"
+    (orgUnitClose)="onOrgUnitUpdate($event, 'CLOSE')">
+</ngx-dhis2-org-unit-filter>
