style: Edited the display of OrgUnit filters

--- a/src/app/pages/assessment/components/assessment/assessment.component.html
+++ b/src/app/pages/assessment/components/assessment/assessment.component.html
@@ -1,6 +1,14 @@
-<ngx-dhis2-org-unit-filter
-    [orgUnitFilterConfig]="orgUnitFilterConfig"
-    [selectedOrgUnitItems]="selectedOrgUnitItems"
-    (orgUnitUpdate)="onOrgUnitUpdate($event, 'UPDATE')"
-    (orgUnitClose)="onOrgUnitUpdate($event, 'CLOSE')">
-</ngx-dhis2-org-unit-filter>
+<div>
+  <div class="card-header">
+    Assessment Form
+  </div>
+  <div class="row">
+  <div class="col-3">
+    <ngx-dhis2-org-unit-filter
+      [orgUnitFilterConfig]="orgUnitFilterConfig"
+      [selectedOrgUnitItems]="selectedOrgUnitItems"
+      (orgUnitUpdate)="onOrgUnitUpdate($event, 'UPDATE')"
+      (orgUnitClose)="onOrgUnitUpdate($event, 'CLOSE')">
+   </ngx-dhis2-org-unit-filter>
+  </div>
+</div>
