style: Edited OrgUnit filters outlook

--- a/src/app/pages/assessment/components/assessment/assessment.component.html
+++ b/src/app/pages/assessment/components/assessment/assessment.component.html
@@ -1,9 +1,12 @@
-<div>
+<div class="main">
   <div class="card-header">
     Assessment Form
   </div>
-  <div class="row">
+  <div class="main row">
   <div class="col-3">
+      <div class="card-header">
+          Select Organization
+        </div>
     <ngx-dhis2-org-unit-filter
       [orgUnitFilterConfig]="orgUnitFilterConfig"
       [selectedOrgUnitItems]="selectedOrgUnitItems"
