--- a/src/app/pages/verification/components/verification/verification.component.html
+++ b/src/app/pages/verification/components/verification/verification.component.html
@@ -1,9 +1,12 @@
-<div>
+<div class="main">
     <div class="card-header">
-      Assessment Form
+      Verfication Form
     </div>
     <div class="row">
-    <div class="col-3">
+    <div class="main col-3">
+      <div class="card-header">
+        Select Organisation
+      </div>
       <ngx-dhis2-org-unit-filter
         [orgUnitFilterConfig]="orgUnitFilterConfig"
         [selectedOrgUnitItems]="selectedOrgUnitItems"
