--- a/src/app/pages/verification/components/verification/verification.component.html
+++ b/src/app/pages/verification/components/verification/verification.component.html
@@ -14,4 +14,10 @@
         (orgUnitClose)="onOrgUnitUpdate($event, 'CLOSE')">
      </ngx-dhis2-org-unit-filter>
     </div>
+    <div class="main-container col-9">
+        <div class="alert alert-primary">
+            Loading Verification Form
+          </div>
+        <mat-spinner class="spinner"></mat-spinner>
+    </div>
   </div>
