--- a/src/app/pages/verification/components/verification/verification.component.css
+++ b/src/app/pages/verification/components/verification/verification.component.css
@@ -1,3 +1,12 @@
 .main{
   margin-top: 4px;
 }
+.spinner{
+  position: absolute;
+  left: 40%;
+  top: 10%;
+}
+.alert{
+  margin-top: 25%;
+  text-align: center;
+}
