--- a/src/app/pages/configuration/components/verification/verification.component.html
+++ b/src/app/pages/configuration/components/verification/verification.component.html
@@ -2,7 +2,7 @@
   <div class="card-header">
     Verification Configurations
   </div>
-  <form [formGroup]="verificationForm">
+  <form [formGroup]="verificationForm" (ngSubmit)="onClickDone()">
     <div class="form-group">
       <label>Indicator</label>
       <input
@@ -48,24 +48,20 @@
     </div>
     <div class="row">
       <div class="form-group form-check col col-10">
-        <a [routerLink]="['/configuration/verification']" routerLinkActive="router-link-active">
-          <button
-          type="submit"
-          class="btn btn-primary"
+        <a
+          [routerLink]="['/configuration/verification']"
+          routerLinkActive="router-link-active"
         >
-          Cancel
-        </button>
+          <button type="submit" class="btn btn-primary">
+            Cancel
+          </button>
         </a>
       </div>
       <div class="form-group form-check col col-2">
-        <a [routerLink]="['/configuration/verification']" routerLinkActive="router-link-active">
-        <button
-          type="submit"
-          class="btn btn-primary"
         >
+        <button type="submit" class="btn btn-primary">
           Save
         </button>
-        </a>
       </div>
     </div>
   </form>
