fix: removed the hardcoded upload values in verification configurations

--- a/src/app/pages/configuration/components/assessment-list/assessment-list.component.html
+++ b/src/app/pages/configuration/components/assessment-list/assessment-list.component.html
@@ -40,7 +40,7 @@
           <td>{{ indicator.indicator }}</td>
           <td>{{ indicator.dataElement }}</td>
           <td>{{ indicator.possibleMaxValue }}</td>
-          <td>{{ sno | date }}</td>
+          <td>{{ indicator.lastUpdate | date }}</td>
           <td>
             <button
               mat-icon-button
