--- a/src/app/pages/configuration/components/verification-list/verification-list.component.html
+++ b/src/app/pages/configuration/components/verification-list/verification-list.component.html
@@ -44,7 +44,7 @@
           <td>{{ indicator.dataElement }}</td>
           <td>{{ indicator.unitFee }}</td>
           <td>{{ indicator.toleranceRate }}</td>
-          <td>{{ sno | date }}</td>
+          <td>{{ indicator.lastUpdate | date }}</td>
           <td>
             <button
               mat-icon-button
