--- a/src/app/pages/configuration/components/assessment-list/assessment-list.component.html
+++ b/src/app/pages/configuration/components/assessment-list/assessment-list.component.html
@@ -38,7 +38,7 @@
         >
           <th scope="row">{{ sno + 1 }}</th>
           <td>{{ indicator.indicator }}</td>
-          <td>{{ indicator.dataElement }}</td>
+          <td>{{ indicator.dataElement | dataElement }}</td>
           <td>{{ indicator.possibleMaxValue }}</td>
           <td>{{ indicator.lastUpdate | date }}</td>
           <td>
