--- a/src/app/pages/report/components/report/report.component.html
+++ b/src/app/pages/report/components/report/report.component.html
@@ -1,3 +1,18 @@
-<p>
-  report module components works!
-</p>
+<div class="row">
+    <div class="col-8">
+      <mat-form-field>
+        <mat-label>Period type</mat-label>
+        <mat-select
+          [(ngModel)]="selectedPeriodType"
+          (ngModelChange)="updatePeriodType()"
+          name="periodType"
+        >
+          <mat-option
+            *ngFor="let periodType of periodTypes"
+            [value]="periodType.id"
+            >{{ periodType.name }}</mat-option
+          >
+        </mat-select>
+      </mat-form-field>
+    </div>
+  </div>
