--- a/src/app/pages/configuration/components/general/general.component.html
+++ b/src/app/pages/configuration/components/general/general.component.html
@@ -3,33 +3,34 @@
     General Configurations
   </div>
   <div class="card">
-      <div class="card-body" style="padding: 5px;">
-          <div class="form-group">
-            <label>Select Period Type</label>
-          </div>
-            <mat-form-field>
-              <mat-label>Period type</mat-label>
-              <mat-select
-                [(ngModel)]="selectedPeriodType"
-                (ngModelChange)="updatePeriodType()"
-                name="periodType"
-              >
-                <mat-option
-                  *ngFor="let periodType of periodTypes"
-                  [value]="periodType.id"
-                  >{{ periodType.name }}</mat-option
-                >
-              </mat-select>
-            </mat-form-field>
-          </div>
-        </div>
+    <div class="card-body" style="padding: 5px;">
+      <div class="form-group">
+        <label>Select Period Type</label>
       </div>
-      <div class="row">
-          <div class="form-group form-check col col-12">
-            <button type="submit" class="btn btn-primary">
-              Save
-            </button>
-          </div>
-        </div>
+        <mat-form-field>
+          <!-- <mat-label>Period type</mat-label> -->
+          <mat-select
+            [(ngModel)]="selectedPeriodType"
+            (ngModelChange)="updatePeriodType()"
+            name="periodType"
+            >
+            <mat-option
+              *ngFor="let periodType of periodTypes"
+              [value]="periodType.id"
+               >
+              {{ periodType.name }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+    </div>
+  <div class="row">
+    <div class="form-group form-check col col-12">
+      <button type="submit" class="btn btn-primary">
+        Save
+      </button>
+    </div>
+  </div>
+</div>
 
 
